--- a/index.html
+++ b/index.html
@@ -6,36 +6,94 @@
 </head>
 <body>
     <audio id="backgroundAudio" src="Theme.mp3" loop="loop" autoplay="autoplay"></audio>
-    <div style="width: 100%;  overflow: hidden;">
+    <div style="width: 100%; height: 500px;  overflow: hidden;">
 
             <div id = "divMenu">
                 <img id = "logo" src="img/logo.png" alt="Logo">
-                <button class = "butoane" onclick="changeContent(0)">Boardgames Regulation</button>
-                <button class = "butoane" onclick="changeContent(1)">General Ranking</button>
-                <button class = "butoane" onclick="changeContent(2)">Top scores</button>
-                <button class = "butoane" onclick="changeContent(3)">Previous Rankings</button>
+                <button class = "butoane" onclick="changeContent(1)">Current Regulation</button>
+                <button class = "butoane" onclick="changeContent(0)">Season Ranking</button>
+                <button class = "butoane" onclick="changeContent(0)">Season Top Scores</button>
+                <div class="dropdown">
+                    <button class = "butoane">Previous Rankings</button>
+                    <div class="dropdown-content">
+                        <button class = "dropButoane" onclick="changeContent(5)">2020</button>
+                        <button class = "dropButoane" onclick="changeContent(6)">2021</button>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class = "butoane">Previous Top Scores</button>
+                    <div class="dropdown-content">
+                        <button class = "dropButoane" onclick="changeContent(7)">2020</button>
+                        <button class = "dropButoane" onclick="changeContent(8)">2021</button>
+                    </div>
+                </div>
             </div>
+
+        <!-- 0 -->
+        <div id = "divEmpy" class = "content">
+            <p>This content is not available.</p> 
+        </div>
+
+        <!-- 1 -->
         <div id = "divRegulament" class = "content">
-            <object data="Boardgames-Regulation-2020.pdf" type="application/pdf" width="1100px" height="610px">
-                <p>Regulamentul nu poate fi afisat pe mobil.
-                 <a href="Boardgames-Regulation-2020.pdf">click aici pentru a descarca Boardgames-Regulation PDF.</a></p>
+            <object data="Boardgames Regulation (2022.1).pdf" type="application/pdf" width="1100px" height="610px">
+                <p>The Boardgames-Regulation can't be displayed on mobile devices.
+                 <a href="Boardgames Regulation (2022.1).pdf">click here to download Boardgames-Regulation PDF.</a></p>
               </object>
             
         </div>
+
+        <!-- 2 -->
         <div id = "divClasamentActual" class = "content">
             <object data="November-General-Ranking.pdf" type="application/pdf" width="1100px" height="610px">
-                <p>Clasamentul nu poate fi afisat pe mobil.
-                 <a href="November-General-Ranking.pdf">click aici pentru a descarca Ranking PDF.</a></p>
+                <p>The Season Ranking can't be displayed on mobile devices.
+                 <a href="November-General-Ranking.pdf">click here to download the Season Ranking PDF.</a></p>
               </object>
         </div>
+
+        <!-- 3 -->
         <div id = "divTopScores" class = "content">
             <object data="2020-Season-Best-Scoring-Table.pdf" type="application/pdf" width="1100px" height="610px">
                 <p>Top Scores nu poate fi afisat pe mobil.
                  <a href="2020-Season-Best-Scoring-Table.pdf">click aici pentru a descarca Top Scores PDF.</a></p>
               </object>
         </div>
+
+        <!-- 4 -->
         <div id = "divClasamenteAnterioare" class = "content">
             <h1>Previous Rankings</h1>
+        </div>
+
+        <!-- 5 -->
+        <div id = "divPreviousRankings2020" class = "content">
+            <object data="previous_rankings/2020 Season Results (Final).pdf" type="application/pdf" width="1100px" height="610px">
+                <p>The Previous Rankings of 2020 can't be displayed on mobile devices.
+                 <a href="previous_rankings/2020 Season Results (Final).pdf">click here to download Previous Rankings of 2020 PDF.</a></p>
+              </object>
+        </div>
+
+        <!-- 6 -->
+        <div id = "divPreviousRankings2021" class = "content">
+            <object data="previous_rankings/2021 Final Scoring (Short).pdf" type="application/pdf" width="1100px" height="610px">
+                <p>The Previous Rankings of 2021 can't be displayed on mobile devices.
+                 <a href="previous_rankings/2021 Final Scoring (Short).pdf">click here to download Previous Rankings of 2021 PDF.</a></p>
+              </object>
+        </div>
+
+        <!-- 7 -->
+        <div id = "divPreviousTopScores2020" class = "content">
+            <object data="previous_top_scores/2020 Season Top 10 Best Scores.pdf" type="application/pdf" width="1100px" height="610px">
+                <p>The Previous Top Scores of 2020 can't be displayed on mobile devices.
+                 <a href="previous_top_scores/2020 Season Top 10 Best Scores.pdf">click here to download Previous Top Scores of 2020 PDF.</a></p>
+              </object>
+        </div>
+
+        <!-- 8 -->
+        <div id = "divPreviousTopScores2021" class = "content">
+            <object data="previous_top_scores/2021 Top 10 Best Scores.pdf" type="application/pdf" width="1100px" height="610px">
+                <p>The Previous Top Scores of 2021 can't be displayed on mobile devices.
+                 <a href="previous_top_scores/2021 Top 10 Best Scores.pdf">click here to download Previous Top Scores of 2021 PDF.</a></p>
+              </object>
         </div>
     </div>
 </body>
