--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <div id = "divMenu">
                 <img id = "logo" src="img/logo.png" alt="Logo">
                 <button class = "butoane" onclick="changeContent(1)">Current Regulation</button>
-                <button class = "butoane" onclick="changeContent(0)">Season Ranking</button>
-                <button class = "butoane" onclick="changeContent(0)">Season Top Scores</button>
+                <button class = "butoane" onclick="changeContent(2)">Season Ranking</button>
+                <button class = "butoane" onclick="changeContent(3)">Season Top Scores</button>
                 <div class="dropdown">
                     <button class = "butoane">Previous Rankings</button>
                     <div class="dropdown-content">
@@ -36,26 +36,26 @@
 
         <!-- 1 -->
         <div id = "divRegulament" class = "content">
-            <object data="Boardgames Regulation (2022.1).pdf" type="application/pdf" width="1100px" height="610px">
+            <object data="2022.4-Boardgames-Regulation.pdf" type="application/pdf" width="1100px" height="610px">
                 <p>The Boardgames-Regulation can't be displayed on mobile devices.
-                 <a href="Boardgames Regulation (2022.1).pdf">click here to download Boardgames-Regulation PDF.</a></p>
+                 <a href="2022.4-Boardgames-Regulation.pdf">click here to download Boardgames-Regulation PDF.</a></p>
               </object>
             
         </div>
 
         <!-- 2 -->
         <div id = "divClasamentActual" class = "content">
-            <object data="November-General-Ranking.pdf" type="application/pdf" width="1100px" height="610px">
+            <object data="2022.4-Scoring-Short.pdf" type="application/pdf" width="1100px" height="610px">
                 <p>The Season Ranking can't be displayed on mobile devices.
-                 <a href="November-General-Ranking.pdf">click here to download the Season Ranking PDF.</a></p>
+                 <a href="2022.4-Scoring-Short.pdf">click here to download the Season Ranking PDF.</a></p>
               </object>
         </div>
 
         <!-- 3 -->
         <div id = "divTopScores" class = "content">
-            <object data="2020-Season-Best-Scoring-Table.pdf" type="application/pdf" width="1100px" height="610px">
+            <object data="2022.4-Top-10-Best-Scores.pdf" type="application/pdf" width="1100px" height="610px">
                 <p>Top Scores nu poate fi afisat pe mobil.
-                 <a href="2020-Season-Best-Scoring-Table.pdf">click aici pentru a descarca Top Scores PDF.</a></p>
+                 <a href="2022.4-Top-10-Best-Scores.pdf">click aici pentru a descarca Top Scores PDF.</a></p>
               </object>
         </div>
 
